# DjangoStripe

./: docker-compose-dev.yaml
backend/: Dockerfile_backend  pyproject.toml
backend/config/: settings.py
