[tool.poetry]
name = "backend"
version = "0.1.0"
description = "DjangoStripe"
authors = ["LyaKakoyPC <LYAKAKOYXY@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0"
stripe = "^7.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
